updated regarding content page (paragraph box)

--- a/inclusive_language.html
+++ b/inclusive_language.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <title></title>
+    <title>Academic Writing</title>
   </head>
   <body>
     <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
@@ -20,18 +20,21 @@
     </div>
     <main class="content">
 			<section id="formal-writing">
-        <h1 class="heading">Academic Writing</h1>
-				<h2>Formal Writing</h2>
-				<p>In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
+        <div class="bimage">
+          <h1 class="heading">Academic Writing</h1>
+        </div>
+				<h2 class="topic">Formal Writing</h2>
+				<p class="content">In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/s2gYq6KbhfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</section>
 			<section id="formal">
-				<h3>Making your writing sound formal</h3>
-        <p>It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>.
+				<h2 class="section">Making your writing sound formal</h2>
+        <p class="content">It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>.
            However there are instances in certain disciplines where your lecturer will invite you to use the first person.
           In reflective journal writing for example, using the first person is appropriate.</p>
 			</section>
 			<section id="ppronouns">
-				<h4>Where to avoid using personal pronouns</h4>
+				<h2 class="subtopic">Where to avoid using personal pronouns</h2>
         <ol type="a">
           <strong><li> When you are reporting what you did</li></strong>
           <p><em><strong>Instead of writing:</strong></em></p>
@@ -65,9 +68,9 @@
         </ol>
 			</section>
 			<section id="judgements">
-				<h4>Making judgements: evaluations and opinions</h4>
-				<p>You are often asked to present a point of view in your writing, but it is important that you do this in an appropriate way.</p>
-        <p>The words in the table below help to grade the strength of your opinion. That is, they fill in the space between ‘yes’ or ‘absolutely’ or ‘no’ ‘not at all’. They are words which cover the ‘shades of grey’.</p>
+				<h2 class="subtopic">Making judgements: evaluations and opinions</h2>
+				<p class="content">You are often asked to present a point of view in your writing, but it is important that you do this in an appropriate way.</p>
+        <p class="content">The words in the table below help to grade the strength of your opinion. That is, they fill in the space between ‘yes’ or ‘absolutely’ or ‘no’ ‘not at all’. They are words which cover the ‘shades of grey’.</p>
 
         <table>
           <tr>
@@ -95,7 +98,7 @@
           </tr>
         </table>
 
-        <p>You can also use the different phrases given below to show the strength of what you are saying your language by using expressions like:</p>
+        <p class="content">You can also use the different phrases given below to show the strength of what you are saying your language by using expressions like:</p>
 
         <table>
           <tr>
@@ -123,54 +126,51 @@
           </tr>
         </table>
 
-        <p>For Example</p>
-        <table>
-          <tr>
-            <td><p>t is unlikely that government funding for university research will increase over the next five years.</p>
-            <p>It seems clear that that the number of online courses will increase.</p>
-            </td>
-          </tr>
-        </table>
+        <p class="content"><strong>For Example</strong></p>
+
+        <p class="paragraph-box">It is unlikely that government funding for university research will increase over the next five years.
+        It seems clear that that the number of online courses will increase.</p>
 			</section>
 			<section id="avoid">
-				<h3>What to avoid in formal writing</h3>
-				<p>When writing an essay, it is important to construct a reasoned argument that is supported by carefully researched evidence. </p>
-        <p>The language that you use needs to be precise and uncluttered by unnecessary devices which have the potential to distract the reader, shift the meaning or detract from the clarity of the argument.</p>
+				<h2 class="section">What to avoid in formal writing</h2>
+				<p class="content">When writing an essay, it is important to construct a reasoned argument that is supported by carefully researched evidence. </p>
+        <p class="content"> The language that you use needs to be precise and uncluttered by unnecessary devices which have the potential to distract the reader, shift the meaning or detract from the clarity of the argument.</p>
 			</section>
 			<section id="cliches">
-				<h4>Cliches</h4>
-				<p>A cliché is an expression that has been overused.</p>
-        <p><strong>Example</strong></p>
-        <table>
-          <tr>
-            <td><ul>
-              <li>We cannot build a new school <strong>at this point in time.</strong></li>
-              <li>Who would have thought that slavery could exist in <strong>this day and age?</strong></li>
-              <li>The Prime Minister believed that <strong>at the end of the day</strong> her policies would be vindicated.</li>
-            </ul></td>
-          </tr>
-        </table>
+				<h2 class="subtopic">Cliches</h2>
+				<p class="content">A cliché is an expression that has been overused.</p>
+        <p class="content"><strong>Example</strong></p>
+
+        <ul class="paragraph-box">
+          <li>We cannot build a new school <strong>at this point in time.</strong></li>
+          <li>Who would have thought that slavery could exist in <strong>this day and age?</strong></li>
+          <li>The Prime Minister believed that <strong>at the end of the day</strong> her policies would be vindicated.</li>
+        </ul>
+
 			</section>
 			<section id="fspeech">
-				<h4>Figures of speech</h4>
-				<p>Figures of speech are closely related to clichés. Like metaphors and similes, figures of speech provide a writer with a colourful or forceful means to draw attention to a particular point but should be avoided in academic writing.</p>
-        <table>
-          <tr>
-            <td><ul>
+				<h2 class="subtopic">Figures of speech</h2>
+				<p class="content">Figures of speech are closely related to clichés. Like metaphors and similes, figures of speech provide a writer with a colourful or forceful means to draw attention to a particular point but should be avoided in academic writing.</p>
+            <ul class="paragraph-box">
               <li>The cleaners were advised <strong>to lift their game</strong> or else.</li>
               <li>Management has been <strong>on a steep learning curve.</strong></li>
               <li>It would be like looking for a <strong>needle in a haystack.</strong></li>
-            </ul></td>
-          </tr>
-        </table>
+            </ul>
 			</section>
 			<section id="informal">
-				<h4>Informal language</h4>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+				<h2 class="subtopic">Informal language</h2>
+				<p class="content">Colloquialisms are words or phrases that belong in conversational contexts:</p>
+        <p class="paragraph-box">Everybody was wandering around like stunned mullets. (Dazed and confused) <br>
+          We'll all be pushing up daisies soon enough. (Dead)</p>
+
+          <p class="content">In everyday speech or conversation we often contract words so that what we say does not sound too pompous.
+            E.g. 'can not' (e.g. can't), 'have not' (e.g. haven't), 'is not' (isn't), 'would have' (would've), 'should have' (e.g. should've) and so on.
+            However, in academic writing, colloquial forms should be avoided.</p>
+            <p class="content">Some colloquialisms, such as slang expressions or phrases might demean or exclude other language users and must also be avoided. See inclusive language.</p>
 			</section>
 			<section id="padding">
-				<h4>Padding</h4>
-				<p>Padding consists of all the extra words added to writing that do not add anything to the meaning or content of the text. This includes:</p>
+				<h2 class="subtopic">Padding</h2>
+				<p class="content">Padding consists of all the extra words added to writing that do not add anything to the meaning or content of the text. This includes:</p>
         <ul>
           <li>Redundant phrases such as 'It is interesting/worthy/important to note that ...’ 'For what it's worth ...’.</li>
           <li>Irrelevant material which has no bearing on your topic.</li>
@@ -179,12 +179,18 @@
         </ul>
 			</section>
 			<section id="complex">
-				<h4>Complex writing</h4>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+				<h2 class="subtopic">Complex writing</h2>
+				<p class="content">Sometimes writers think that by using big, unfamiliar words or complicated sentence structures that this makes their writing sound sophisticated or more important. But it usually just means that no one understands it. For example:</p>
+        <p class="paragraph-box"><em>This author concludes that, after due and full consideration, some writers exhibit discursive practices that produce undecipherable sentences, the intelligibility of which beggar even the most sophisticated ratiocinative beings.</em></p>
+        <p class="content">The sentence could be rewritten in a number of ways:</p>
+        <p class="content"><strong>Very simply</strong></p>
+        <p class="paragraph-box">Some people write so badly that no one understands it.</p>
+          <p class="content"><strong>More Complex</strong></p>
+        <p class="paragraph-box">Some people write in a way that makes it difficult for even quite educated people to understand them.</p>
 			</section>
 			<section id="texting">
-				<h4>Texting language</h4>
-				<p>Texting language is the collective term used for the shorthand way that people talk to each other using text messages, email, instant messaging and other forms of written contact.
+				<h2 class="subtopic">Texting language</h2>
+				<p class="content">Texting language is the collective term used for the shorthand way that people talk to each other using text messages, email, instant messaging and other forms of written contact.
           Abbreviating words is common in text language as the examples below show.</p>
         <ul>
           <li>asap - As soon as possible</li>
@@ -194,148 +200,12 @@
           <li>btw - By the way</li>
         </ul>
 
-        <p>These example and others are used in informal texting exchanges. It is important to remember that text language is <strong>not acceptable </strong>in formal writing such as essays, exams, reports etcetera.</p>
-			</section>
+        <p class="content">These example and others are used in informal texting exchanges. It is important to remember that text language is <strong>not acceptable </strong>in formal writing such as essays, exams, reports etcetera.</p>
+        <footer class="footer">
+        </div>
+      </section>
 		</main>
-		<footer class="footer">
 
-    <h2 class="topic">Formal</h2>
-
-    <p class="content">Charles Darwin University (CDU) is an education provider as well as an employer.
-      As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
-      It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment.</p>
-
-      <h2 class="topic">What is inclusive language?</h2>
-
-
-    <p class="content">Inclusive language is language that does not belittle, exclude, stereotype or trivialise people on the basis of their race, gender or disability.</p>
-    <iframe width="500" height="290" src="https://www.youtube.com/embed/ewaXfMeSM0w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
-    <p class="content">At university there are a number of people from different cultural and linguistic backgrounds as well as people with disabilities, different sexual preferences and holding varied religious or spiritual belief systems.
-    We all have a responsibility to respect these differences and ensure that our speech and language is appropriate and non-discriminatory.
-    This means avoiding terms which are offensive or using language that portrays certain people in negative ways.</p>
-
-
-      <h3 class="subtopic">Language and Culture</h3>
-      <p class="content">An Indigenous Australian is someone of Aboriginal or Torres Strait Islander descent, identifies as an Aboriginal or Torres Strait Islander and is accepted as an Aboriginal or Torres Strait Islander in the community in which he/she lives or has lived.</p>
-
-        <p class="content">The term aboriginal, written with a small ‘a’ is used to describe indigenous people around the world and fails to recognise the uniqueness of Indigenous Australians.</p>
-        <p class="content"> The term Aboriginal, with a capital ‘A’, on the other hand denotes Indigenous Australians and is therefore a more appropriate word to use.</p>
-        <p class="content">Indigenous Australians are not, however, a homogeneous group and prefer to be called by the language or cultural groups to which they belong.
-          For example, in the Northern Territory there are many different groups such as the Larrakia (Darwin), Tiwi people who live on Bathurst and Melville Islands, the Yolngu from Arnhem Land and the Warlpiri from areas north and west of Alice Springs.</p>
-
-        <table>
-          <tr>
-            <th>Appropriate</th>
-            <th>Inappropriate</th>
-          </tr>
-
-          <tr>
-            <td>Indigenous Australian people</td>
-            <td>aborigines</td>
-          </tr>
-
-          <tr>
-            <td>Aboriginal people</td>
-            <td>Black or blackfellas</td>
-          </tr>
-
-          <tr>
-            <td></td>
-            <td>Half caste, quarter caste, full blood</td>
-          </tr>
-        </table>
-
-      <h3 class="subtopic">Language and Australians of language background other than English</h3>
-      <p class="content">It is important too to avoid ethnic or racist labels which create negative stereotypes.
-        Any person, who was born in Australia or has acquired Australian citizenship regardless of their cultural background or origins, should be referred to as Australian.
-
-        Terms such as ‘wog’ or ‘dago’ or ‘chink’ should be avoided as they demean and belittle people and are seen as a form of racial harassment.</p>
-
-        <h3 class="subtopic">Language and Sexuality</h3>
-        <p class="content">Language that humiliates or intends harm to people on the basis of their assumed or actual sexual preference is not acceptable and can be offensive.
-
-          Derogatory comments about gays, lesbian, bisexual members of the public are heard all too often.
-          Unless members of these groups have used specific terms to reclaim their identity and as a means of empowerment, it is not generally acceptable to use terms such as 'dyke' or 'queer', 'poofter', and so on.</p>
-
-          <table>
-            <tr>
-              <th>Appropriate</th>
-              <th>Inappropriate</th>
-            </tr>
-
-            <tr>
-              <td>lesbian, bisexual woman/man</td>
-              <td>dyke, faggot, homo, tranny, lemon</td>
-            </tr>
-
-            <tr>
-              <td>transgender person, transsexual person</td>
-              <td></td>
-            </tr>
-          </table>
-
-        <h3 class="subtopic">Language and Gender</h3>
-        <p class="content">Historically language usage has privileged men and often rendered women invisible or inferior.
-
-          Here are some examples of appropriate and inappropriate language usage.</p>
-
-          <table>
-            <tr>
-              <th>Appropriate</th>
-              <th>Inappropriate</th>
-            </tr>
-
-            <tr>
-              <td>Humans, humankind, spokesperson, chairperson.</td>
-              <td>Man, mankind, spokesman, chairman</td>
-            </tr>
-
-            <tr>
-              <td>Office staff, doctor, cleaner, professor</td>
-              <td>The girls in the office, woman doctor, male nurse, cleaning lady, female professor</td>
-            </tr>
-
-            <tr>
-              <td>Actor, author, manager</td>
-              <td>Authoress, actress, manageress</td>
-            </tr>
-          </table>
-            <img src="images/flexible-gender-identity.png" alt="">
-
-        <h3 class="subtopic">Language and Disability</h3>
-        <p class="content">It is important that people with a disability feel that they are part of university life and are not excluded through the inappropriate use of language.
-          Language that constructs people with disabilities as victims and focuses on the disability and not the person is inappropriate.
-          It is therefore important to put the person, not the disability first.</p>
-
-          <table>
-            <tr>
-              <th>Appropriate</th>
-              <th>Inappropriate</th>
-            </tr>
-
-            <tr>
-              <td>Person with a disability</td>
-              <td>Handicapped or disabled</td>
-            </tr>
-
-            <tr>
-              <td>Person with a hearing impairment</td>
-              <td>Deaf</td>
-            </tr>
-
-            <tr>
-              <td>Person with a visual impairment</td>
-              <td>Blind</td>
-            </tr>
-
-            <tr>
-              <td>Person with a psychiatric disorder</td>
-              <td>Mad/insane</td>
-            </tr>
-          </table>
-
-          <p class="content">In summary, it is important to remember that inclusive language is required at university and students are encouraged to use appropriate terms and language in all their written and oral communications.</p>
-    </div>
   <script src="main.js"></script>
   </body>
 </html>
