--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       <link rel="stylesheet" href="styles/main.css" media="all">
    </head>
    <body>
-      <h1 class="pageheading">Academic Writing</h1>
+      <div class="pageheading">
+         <h1>Academic Writing</h1>
+      </div>
       <div class="content">
          <section class="pageintro">
             <h2>Introduction to academic writing</h2>
@@ -23,25 +25,14 @@
                who run free workshops for internal and external students on&nbsp;English language usage as well as developing your skills to edit and proofread your assignments.
             </p>
          </section>
-         <section class="cards">
-            <div class="card">
-               <img src="images/language.png" alt="Language" class="card-img">
-               <h3>Inclusive Language</h3>
-               <p>
-                  Learn about the importance of how to use inclusive language while at university.
-               </p>
-               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
-               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
-               
-            </div>
+         <div class="cards">
             <div class="card">
                <img src="images/formalwriting.png" alt="Formal Writing" class="card-img">
                <h3>Formal Writing</h3>
                <p>
                   Learn about all about what is appropriate and inappropriate when it comes to formal writing.
                </p>
-               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
-               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button1">Read More</a>
             </div>
             <div class="card">
                <img src="images/paraphrase.png" alt="Quoting, Paraphrasing & Summarising" class="card-img">
@@ -49,19 +40,9 @@
                <p>
                   Learn how to include the ideas of an expert in your text.
                </p>
-               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
-               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button1">Read More</a>
             </div>
-            <div class="card">
-               <img src="images/punctuation.png" alt="Punctuation" class="card-img">
-               <h3>Punctuation</h3>
-               <p>
-                  Learn how to use punctuation marks to organise your words into clauses and sentences.
-               </p>
-               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
-               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
-            </div>
-         </section>
+         </div>
       </div>
    </body>
-</html>
+ </html>
