Content page edited

--- a/QPS.html
+++ b/QPS.html
@@ -167,12 +167,11 @@
             The studies found that on the whole, the initial cost to government from immigration (for social security, health and other services) is more than repaid in taxes collected from immigrants.
             Indeed, Australian governments "save" by escaping the cost of bringing up and educating immigrants who arrive as adults.</p>
 
-            <p>Coalition government cuts to the social security entitlements of recent immigrants and to special migrant education programs only worsen the plight of some of the main victims of unemployment.
+            <p><mark>Coalition government cuts</mark> to the <mark>social security entitlements</mark> of recent immigrants and to special migrant education programs only <mark>worsen the plight</mark> of some of the main victims of unemployment.
             The cuts prolong their unemployment while giving credibility to the myth that immigration causes unemployment.
             The previous Labor government also encouraged anti-immigration sentiments by cutting immigration quotas, attacking the rights of refugees and reducing the rights of recent migrants.</p>
 
-            So if immigration is not the cause of growing unemployment, it must be asked, what is?
-          </p>
+            <p>So <mark>if immigration is not the cause of growing unemployment</mark>, it must be asked, <mark>what is?</mark></p>
         </div>
 
         <p class="content"><strong>Summary</strong></p>
