--- a/QPS.html
+++ b/QPS.html
@@ -52,7 +52,7 @@
 			</section>
 
 			<section id="judgements">
-				<h2 class="subtopic">Quoting</h2>
+				<h2 class="section">Quoting</h2>
 				<ul>
 				  <li>Short quotes, quotes of less than three lines, should be written into the paragraph and shown by quotation marks: “ .............”.</li>
           <div class="paragraph-box">
@@ -121,7 +121,7 @@
       </section>
 
 			<section id="cliches">
-				<h2 class="subtopic">Summarising</h2>
+				<h2 class="section">Summarising</h2>
 				<p class="content">A summary, as compared to a paraphrase, is always much shorter that the original text.
           When you write a summary, you limit yourself to giving your readers only the main idea/argument of an article or chapter of a book.
           To write a good summary, keep the following points in mind:</p>
