--- a/formal_writing.html
+++ b/formal_writing.html
@@ -1,45 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/content.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="styles/content.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <!-- <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script> -->
+    <!-- <link rel="stylesheet" href="styles/fontawesome.css"> -->
+    <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <title>Academic Writing</title>
+
+    <title>Formal Writing | Academic Writing</title>
   </head>
   <body>
     <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
-    <div class="body-container">
-    <div class="header1">
-      <img src="images/allsp.gif" alt="">
-      <div class="search-box">
-          <input class="search-txt"type="text"  placeholder="Type to search">
-          <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
-      </div>
+    <div class="search-box">
+        <input class="search-txt"type="text"  placeholder="Type to search">
+        <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
     </div>
-    <main class="content">
-			<section id="formal-writing">
-        <div class="bimage">
-          <h1 class="heading">Academic Writing</h1>
-        </div>
-				<h2 class="topic">Formal Writing</h2>
-				<p class="content">In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
+
+
+    <header onclick="openNav()" class="header">
+      <h1 class="heading">Academic Writing <span class="arrow down"></span></h1>
+    </header>
+
+    <!-- Nav inspiration: https://css-tricks.com/sticky-smooth-active-nav/ -->
+    <nav id="nav-overlay" class="overlay sidebar">
+      <div onclick="closeNav()" class="header">
+        <h2 class="heading">Academic Writing <span class="arrow up"></span></h2>
+      </div>
+
+      <ul>
+        <li><a onclick="closeNav()" class="nav-level1" href="#formal-writing">Formal Writing</a>
+          <ul>
+            <li><a onclick="closeNav()" class="nav-level2" href="#formal">Making your writing sound formal</a>
+              <ul>
+                <li><a onclick="closeNav()" href="#ppronouns">Where to avoid using personal pronouns</a></li>
+                <li><a onclick="closeNav()" href="#judgements" title="Making judgements: evaluations and opinions">Making judgements: evaluations and opinions</a></li>
+              </ul>
+            </li>
+            <li><a onclick="closeNav()" class="nav-level2" href="#avoid">What to avoid in formal writing</a>
+              <ul>
+                <li><a onclick="closeNav()" href="#cliches">Cliches</a></li>
+                <li><a onclick="closeNav()" href="#fspeech">Figures of speech</a>
+                  <ul>
+                    <li><a onclick="closeNav()" href="#simile"  class="nav-level4">Similes</a></li>
+                    <li><a onclick="closeNav()" href="#metaphor" class="nav-level4">Metaphors</a></li>
+                  </ul>
+                </li>
+                <li><a onclick="closeNav()" href="#informal">Informal language</a></li>
+                <li><a onclick="closeNav()" href="#padding">Padding</a></li>
+                <li><a onclick="closeNav()" href="#complex">Complex writing</a></li>
+                <li><a onclick="closeNav()" href="#texting">Texting language</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+
+        <li><a onclick="closeNav()" class="nav-level1" href="#qps">Quoting, Paraphrasing and Summarising</a>
+          <ul>
+            <li><a onclick="closeNav()" class="nav-level2" href="#quoting">Quoting</a></li>
+            <li><a onclick="closeNav()" class="nav-level2" href="#paraphrasing">Paraphrasing</a></li>
+            <li><a onclick="closeNav()" class="nav-level2" href="#summarising">Summarising</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
+    <main>
+      <section id="formal-writing">
+        <h1>Formal Writing</h1>
+        <p>In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
         <div class="iframe-container">
           <iframe width="900" height="400" src="https://www.youtube.com/embed/s2gYq6KbhfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-			</section>
+      </section>
 
       <section id="formal">
-				<h2 class="section">Making your writing sound formal</h2>
-        <p class="content">It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>.
+        <h2>Making your writing sound formal</h2>
+        <p>It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>.
            However there are instances in certain disciplines where your lecturer will invite you to use the first person.
           In reflective journal writing for example, using the first person is appropriate.</p>
-			</section>
+      </section>
 
       <section id="ppronouns">
-				<h2 class="subtopic">Where to avoid using personal pronouns</h2>
+        <h3>Where to avoid using personal pronouns</h3>
         <ol type="a">
           <strong><li> When you are reporting what you did</li></strong>
           <p><em><strong>Instead of writing:</strong></em></p>
@@ -70,12 +117,12 @@
           <p><em><strong>Write:</strong></em></p>
           <p>The students’ results show that children are much more likely to be successful in their first two years of school if they have benefitted from preschool activities that promote cognitive growth.</p>
         </ol>
-			</section>
+      </section>
 
       <section id="judgements">
-				<h2 class="subtopic">Making judgements: evaluations and opinions</h2>
-				<p class="content">You are often asked to present a point of view in your writing, but it is important that you do this in an appropriate way.</p>
-        <p class="content">The words in the table below help to grade the strength of your opinion. That is, they fill in the space between ‘yes’ or ‘absolutely’ or ‘no’ ‘not at all’. They are words which cover the ‘shades of grey’.</p>
+        <h3>Evaluations and opinions</h3>
+        <p>You are often asked to present a point of view in your writing, but it is important that you do this in an appropriate way.</p>
+        <p>The words in the table below help to grade the strength of your opinion. That is, they fill in the space between ‘yes’ or ‘absolutely’ or ‘no’ ‘not at all’. They are words which cover the ‘shades of grey’.</p>
 
         <table>
           <tr>
@@ -103,7 +150,7 @@
           </tr>
         </table>
 
-        <p class="content">You can also use the different phrases given below to show the strength of what you are saying your language by using expressions like:</p>
+        <p>You can also use the different phrases given below to show the strength of what you are saying your language by using expressions like:</p>
 
         <table>
           <tr>
@@ -131,89 +178,100 @@
           </tr>
         </table>
 
-        <p class="content"><strong>For Example</strong></p>
+        <p><strong>For Example</strong></p>
 
-        <div class="paragraph-box">
-          <p>It is unlikely that government funding for university research will increase over the next five years.
+        <div>
+          <p class="example">It is unlikely that government funding for university research will increase over the next five years.
           It seems clear that that the number of online courses will increase.</p>
         </div>
-			</section>
+      </section>
 
       <section id="avoid">
-				<h2 class="section">What to avoid in formal writing</h2>
-				<p class="content">When writing an essay, it is important to construct a reasoned argument that is supported by carefully researched evidence. </p>
-        <p class="content"> The language that you use needs to be precise and uncluttered by unnecessary devices which have the potential to distract the reader, shift the meaning or detract from the clarity of the argument.</p>
-			</section>
-			<section id="cliches">
-				<h2 class="subtopic">Cliches</h2>
-				<p class="content">A cliché is an expression that has been overused.</p>
-        <p class="content"><strong>Example</strong></p>
+        <h2>What to avoid in formal writing</h2>
+        <p>When writing an essay, it is important to construct a reasoned argument that is supported by carefully researched evidence. </p>
+        <p> The language that you use needs to be precise and uncluttered by unnecessary devices which have the potential to distract the reader, shift the meaning or detract from the clarity of the argument.</p>
+      </section>
+      <section id="cliches">
+        <h3>Cliches</h3>
+        <p>A cliché is an expression that has been overused.</p>
+        <p><strong>Example</strong></p>
 
-        <div class="paragraph-box">
+        <div class="example">
           <ul>
             <li>We cannot build a new school <strong>at this point in time.</strong></li>
             <li>Who would have thought that slavery could exist in <strong>this day and age?</strong></li>
             <li>The Prime Minister believed that <strong>at the end of the day</strong> her policies would be vindicated.</li>
           </ul>
         </div>
-			</section>
+      </section>
 
       <section id="fspeech">
-				<h2 class="subtopic">Figures of speech</h2>
-				<p class="content">Figures of speech are closely related to clichés. Like metaphors and similes, figures of speech provide a writer with a colourful or forceful means to draw attention to a particular point but should be avoided in academic writing.</p>
-        <div class="paragraph-box">
+        <h3>Figures of speech</h3>
+        <p>Figures of speech are closely related to clichés. Like metaphors and similes, figures of speech provide a writer with a colourful or forceful means to draw attention to a particular point but should be avoided in academic writing.</p>
+        <div class="example">
           <ul>
             <li>The cleaners were advised <strong>to lift their game</strong> or else.</li>
             <li>Management has been <strong>on a steep learning curve.</strong></li>
             <li>It would be like looking for a <strong>needle in a haystack.</strong></li>
           </ul>
         </div>
-			</section>
+      </section>
 
-			<section id="informal">
-				<h2 class="subtopic">Informal language</h2>
-				<p class="content">Colloquialisms are words or phrases that belong in conversational contexts:</p>
-        <div class="paragraph-box">
+      <section id="simile">
+        <h4>Similes</h4>
+        <p>A simile compares a person, action or object with something else - for example, <strong>'fly like an eagle', 'solid as a rock', 'as happy as Larry', 'pleased as Punch'</strong>, and so on.</p>
+        <p>Well-chosen metaphors and similes can give your writing immense expressive power. Once a metaphor or simile has become a cliché, it no longer provides a vivid image for the reader. Consequently, instead of impressing your readers with your writing style, you leave them with the impression that you have nothing of substance to say.</p>
+      </section>
+
+      <section id="metaphor">
+        <h4>Metaphors</h4>
+        <p>A metaphor takes a name or descriptive term and applies it to a person or object in a non-literal sense - for example, <strong>'a glaring error', 'the heart of the matter', 'pillar of the community', 'wave of terrorism'</strong>, and so on.</p>
+      </section>
+
+      <section id="informal">
+        <h3>Informal language</h3>
+        <p>Colloquialisms are words or phrases that belong in conversational contexts:</p>
+        <div class="example">
           <p>Everybody was wandering around like stunned mullets. (Dazed and confused) <br>
             We'll all be pushing up daisies soon enough. (Dead)</p>
         </div>
 
-          <p class="content">In everyday speech or conversation we often contract words so that what we say does not sound too pompous.
+          <p>In everyday speech or conversation we often contract words so that what we say does not sound too pompous.
             E.g. 'can not' (e.g. can't), 'have not' (e.g. haven't), 'is not' (isn't), 'would have' (would've), 'should have' (e.g. should've) and so on.
             However, in academic writing, colloquial forms should be avoided.</p>
-            <p class="content">Some colloquialisms, such as slang expressions or phrases might demean or exclude other language users and must also be avoided. See inclusive language.</p>
-			</section>
+            <p>Some colloquialisms, such as slang expressions or phrases might demean or exclude other language users and must also be avoided. See inclusive language.</p>
+      </section>
 
       <section id="padding">
-				<h2 class="subtopic">Padding</h2>
-				<p class="content">Padding consists of all the extra words added to writing that do not add anything to the meaning or content of the text. This includes:</p>
+        <h3>Padding</h3>
+        <p>Padding consists of all the extra words added to writing that do not add anything to the meaning or content of the text. This includes:</p>
         <ul>
           <li>Redundant phrases such as 'It is interesting/worthy/important to note that ...’ 'For what it's worth ...’.</li>
           <li>Irrelevant material which has no bearing on your topic.</li>
           <li>'Dead' words includes words which repeat other words e.g. dead corpse, combined together.</li>
           <li>Adverbs add quantity but little to the meaning. Adverbs such as: really, rather, quite, totally and so on, may not enhance your expression. For example: really obscure, rather tedious.</li>
         </ul>
-			</section>
-			<section id="complex">
-				<h2 class="subtopic">Complex writing</h2>
-				<p class="content">Sometimes writers think that by using big, unfamiliar words or complicated sentence structures that this makes their writing sound sophisticated or more important. But it usually just means that no one understands it. For example:</p>
-        <div class="paragraph-box">
+      </section>
+      <section id="complex">
+        <h3>Complex writing</h3>
+        <p>Sometimes writers think that by using big, unfamiliar words or complicated sentence structures that this makes their writing sound sophisticated or more important. But it usually just means that no one understands it. For example:</p>
+        <div class="example">
           <p><em>This author concludes that, after due and full consideration, some writers exhibit discursive practices that produce undecipherable sentences, the intelligibility of which beggar even the most sophisticated ratiocinative beings.</em></p>
         </div>
-        <p class="content">The sentence could be rewritten in a number of ways:</p>
-        <p class="content"><strong>Very simply</strong></p>
-        <div class="paragraph-box">
+        <p>The sentence could be rewritten in a number of ways:</p>
+        <p><strong>Very simply</strong></p>
+        <div class="example">
           <p>Some people write so badly that no one understands it.</p>
         </div>
-        <p class="content"><strong>More Complex</strong></p>
-        <div class="paragraph-box">
+        <p><strong>More Complex</strong></p>
+        <div class="example">
           <p>Some people write in a way that makes it difficult for even quite educated people to understand them.</p>
         </div>
-			</section>
+      </section>
 
       <section id="texting">
-				<h2 class="subtopic">Texting language</h2>
-				<p class="content">Texting language is the collective term used for the shorthand way that people talk to each other using text messages, email, instant messaging and other forms of written contact.
+        <h3>Texting language</h3>
+        <p>Texting language is the collective term used for the shorthand way that people talk to each other using text messages, email, instant messaging and other forms of written contact.
           Abbreviating words is common in text language as the examples below show.</p>
         <ul>
           <li>asap - As soon as possible</li>
@@ -223,12 +281,13 @@
           <li>btw - By the way</li>
         </ul>
 
-        <p class="content">These example and others are used in informal texting exchanges. It is important to remember that text language is <strong>not acceptable </strong>in formal writing such as essays, exams, reports etcetera.</p>
-        <footer class="footer">
-        </div>
+        <p>These example and others are used in informal texting exchanges. It is important to remember that text language is <strong>not acceptable </strong>in formal writing such as essays, exams, reports etcetera.</p>
       </section>
-		</main>
-
-  <script src="scripts/main.js"></script>
+    </main>
+    <footer class="footer">
+      &copy;2018 Footer
+    </footer>
+    <script type="text/javascript" src="scripts/nav.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
