Added the link to navigation bar which lead to other pafe

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <p>
                   Learn about all about what is appropriate and inappropriate when it comes to formal writing.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button1">Read More</a>
+               <a href="formal_writing.html" class="button1">Read More</a>
             </div>
             <div class="card">
                <img src="images/paraphrase.png" alt="Quoting, Paraphrasing & Summarising" class="card-img">
@@ -40,7 +40,7 @@
                <p>
                   Learn how to include the ideas of an expert in your text.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button1">Read More</a>
+               <a href="quoting_p_s.html" class="button1">Read More</a>
             </div>
          </div>
       </div>
