Added nav to the Quoting, Paraphrasing and Summarising page Switched Formal Writing and QPS nav links in the sidenav Added hrefs to the nav links in both content pages Re-added example css in content.css

--- a/formal_writing.html
+++ b/formal_writing.html
@@ -6,24 +6,19 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="styles/content.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="styles/fontawesome.css"> -->
-    <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <link href="styles/fontawesome.css" rel="stylesheet">
 
     <title>Formal Writing | Academic Writing</title>
   </head>
   <body>
     <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
-    <div class="search-box">
+<!--     <div class="search-box">
         <input class="search-txt"type="text"  placeholder="Type to search">
         <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
-    </div>
-
+    </div> -->
 
     <header onclick="openNav()" class="header">
-      <h1 class="heading">Academic Writing <span class="arrow down"></span></h1>
+      <h1 class="heading"><a href="index.html">Academic Writing </a><span class="arrow down"></span></h1>
     </header>
 
     <!-- Nav inspiration: https://css-tricks.com/sticky-smooth-active-nav/ -->
@@ -59,11 +54,11 @@
           </ul>
         </li>
 
-        <li><a onclick="closeNav()" class="nav-level1" href="#qps">Quoting, Paraphrasing and Summarising</a>
+        <li><a onclick="closeNav()" class="nav-level1" href="quoting_p_s.html#qps">Quoting, Paraphrasing and Summarising</a>
           <ul>
-            <li><a onclick="closeNav()" class="nav-level2" href="#quoting">Quoting</a></li>
-            <li><a onclick="closeNav()" class="nav-level2" href="#paraphrasing">Paraphrasing</a></li>
-            <li><a onclick="closeNav()" class="nav-level2" href="#summarising">Summarising</a></li>
+            <li><a onclick="closeNav()" class="nav-level2" href="quoting_p_s.html#quoting">Quoting</a></li>
+            <li><a onclick="closeNav()" class="nav-level2" href="quoting_p_s.html#paraphrasing">Paraphrasing</a></li>
+            <li><a onclick="closeNav()" class="nav-level2" href="quoting_p_s.html#summarising">Summarising</a></li>
           </ul>
         </li>
       </ul>
@@ -289,5 +284,6 @@
     </footer>
     <script type="text/javascript" src="scripts/nav.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </body>
 </html>
