Trying to add consistency with heade and footer of other pages

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <link rel="stylesheet" href="styles/main.css" media="all">
    </head>
    <body>
-      <div class="pageheading">
-         <h1>Academic Writing</h1>
-      </div>
+     <header onclick="openNav()" class="header">
+       <h1 class="heading"><a href="index.html">Academic Writing </a><span class="arrow down"></span></h1>
+     </header>
       <div class="content">
          <section class="pageintro">
             <h2>Introduction to academic writing</h2>
@@ -44,5 +44,8 @@
             </div>
          </div>
       </div>
+      <footer class="footer">
+        &copy;2018 Footer
+      </footer>
    </body>
  </html>
