--- a/formal_writing.html
+++ b/formal_writing.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="description" content="CDU Study Skills website, Academic Writing section, Formal Writing topic">
     <link href="styles/content.css" rel="stylesheet">
-    <link href="styles/fontawesome.css" rel="stylesheet">
 
     <title>Formal Writing | Academic Writing</title>
   </head>
@@ -69,7 +67,7 @@
         <h1>Formal Writing</h1>
         <p>In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
         <div class="iframe-container">
-          <iframe width="900" height="400" src="https://www.youtube.com/embed/s2gYq6KbhfA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe title="contentVideo" width="900" height="400" src="https://www.youtube.com/embed/s2gYq6KbhfA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
