--- a/quoting_p_s.html
+++ b/quoting_p_s.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="description" content="CDU Study Skills website, Academic Writing section, Quoting, paraphrasing and summarising topic">
     <link href="styles/content.css" rel="stylesheet">
-    <link href="styles/fontawesome.css" rel="stylesheet" >
 
     <title>Formal Writing | Academic Writing</title>
   </head>
@@ -72,7 +70,7 @@
         <p>Any writing you do at university will require reference to recognised experts or authorities in that particular subject area (discipline), to give the thoughts, ideas and information in your assignment credibility.
           There are three ways of including the ideas of an expert in your text: quoting, paraphrasing, summarising. No matter what you choose to do, you must acknowledge the source of these ideas.</p>
         <div class="iframe-container">
-          <iframe width="900" height="400" src="https://www.youtube.com/embed/s2gYq6KbhfA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe title="contentVideo" width="900" height="400" src="https://www.youtube.com/embed/s2gYq6KbhfA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
